Tray Application [VPNWIN-2762] [VPNWIN-2763] [VPNWIN-2764] [VPNWIN-2765] [VPNWIN-2846] [VPNWIN-2827]

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -91,9 +91,11 @@
     <PackageVersion Include="System.Threading.Tasks.Extensions" Version="4.6.0" />
     <PackageVersion Include="System.ValueTuple" Version="4.5.0" />
     <PackageVersion Include="TimeZoneConverter" Version="7.0.0" />
-    <PackageVersion Include="Vanara.PInvoke.PowrProf" Version="4.0.4" />
-    <PackageVersion Include="Vanara.PInvoke.Security" Version="4.0.4" />
-    <PackageVersion Include="Vanara.PInvoke.User32" Version="4.0.4" />
+    <PackageVersion Include="Vanara.PInvoke.PowrProf" Version="4.1.3" />
+    <PackageVersion Include="Vanara.PInvoke.Security" Version="4.1.3" />
+    <PackageVersion Include="Vanara.PInvoke.SHCore" Version="4.1.3" />
+    <PackageVersion Include="Vanara.PInvoke.Shell32" Version="4.1.3" />
+    <PackageVersion Include="Vanara.PInvoke.User32" Version="4.1.3" />
     <PackageVersion Include="WinUI3Localizer" Version="2.2.0" />
     <PackageVersion Include="WinUIEx" Version="2.5.0" />
   </ItemGroup>
