--- a/src/Client/Logic/Feedback/ProtonVPN.Client.Logic.Feedback.Tests/ProtonVPN.Client.Logic.Feedback.Tests.csproj
+++ b/src/Client/Logic/Feedback/ProtonVPN.Client.Logic.Feedback.Tests/ProtonVPN.Client.Logic.Feedback.Tests.csproj
@@ -41,7 +41,10 @@
         <PackageReference Include="Microsoft.NET.Test.Sdk" />
         <PackageReference Include="MSTest.TestAdapter" />
         <PackageReference Include="MSTest.TestFramework" />
-        <PackageReference Include="coverlet.collector" />
+        <PackageReference Include="coverlet.collector">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="NSubstitute" />
         <PackageReference Include="System.Formats.Asn1" />
         <PackageReference Include="System.Text.Json" />
