--- a/src/Tests/ProtonVPN.Tests.Common/ProtonVPN.Tests.Common.csproj
+++ b/src/Tests/ProtonVPN.Tests.Common/ProtonVPN.Tests.Common.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
+        <TargetFramework>net8.0-windows</TargetFramework>
         <PreserveCompilationContext>true</PreserveCompilationContext>
         <OutputType>Library</OutputType>
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
